# frappe-sentry

./: README.md  package.json  pyproject.toml  setup.py
sentry/: __init__.py  hooks.py  utils.py
sentry/config/: desktop.py  docs.py
sentry/public/: build.json
sentry/public/js/: sentry-web.js  sentry.bundle.js  sentry.js
sentry/sentry/: boot.py  utils.py
