[project]
name = "aterp"
authors = [
    { name = "AgriTheory", email = "support@agritheory.dev"}
]
description = "Logs errors to Sentry"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
	"sentry-sdk"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"

[tool.bench.dev-dependencies]
coverage = "~=6.4.1"
Faker = "~=13.12.1"
pyngrok = "~=5.0.5"
unittest-xml-reporting = "~=3.0.4"
watchdog = "~=2.1.9"
